@@ -42,6 +42,8 @@ struct SpinButtonProperties : WidgetProperties
             spinButton->setValue(tgui::stof(value));
         else if (property == "Step")
             spinButton->setStep(tgui::stof(value));
+        else if (property == "VerticalScroll")
+            spinButton->setVerticalScroll(parseBoolean(value, true));
         else
             WidgetProperties::updateProperty(widget, property, value);
     }
@@ -54,6 +56,7 @@ struct SpinButtonProperties : WidgetProperties
         pair.first["Maximum"] = {"Float", tgui::to_string(spinButton->getMaximum())};
         pair.first["Value"] = {"Float", tgui::to_string(spinButton->getValue())};
         pair.first["Step"] = {"Float", tgui::to_string(spinButton->getStep())};
+        pair.first["VerticalScroll"] = {"Bool", tgui::to_string(spinButton->getVerticalScroll())};
 
         const auto renderer = spinButton->getSharedRenderer();
         pair.second["Borders"] = {"Outline", tgui::Serializer::serialize(renderer->getBorders())};
