@@ -101,6 +101,7 @@ namespace tgui
         ///
         /// @param size  The new size of the scrollbar
         ///
+        /// Note that the VerticalScroll propery is changed by this function based on the given width and height.
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         void setSize(const Layout2d& size) override;
         using Widget::setSize;
@@ -206,6 +207,22 @@ namespace tgui
         /// @see setViewportSize
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         bool getAutoHide() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes whether the scrollbar lies horizontally or vertically
+        /// @param vertical  Should the scrollbar lie vertically?
+        ///
+        /// This function will swap the width and height of the scrollbar if it didn't lie in the wanted direction.
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setVerticalScroll(bool vertical);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns whether the scrollbar lies horizontally or vertically
+        /// @return Does the scrollbar lie vertically?
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        bool getVerticalScroll() const;
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
