@@ -95,6 +95,7 @@ namespace tgui
         ///
         /// @param size  The new size of the slider
         ///
+        /// Note that the VerticalScroll propery is changed by this function based on the given width and height.
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         void setSize(const Layout2d& size) override;
         using Widget::setSize;
@@ -211,6 +212,22 @@ namespace tgui
         /// @see setStep
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         float getStep() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes whether the slider lies horizontally or vertically
+        /// @param vertical  Should the slider lie vertically?
+        ///
+        /// This function will swap the width and height of the slider if it didn't lie in the wanted direction.
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setVerticalScroll(bool vertical);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns whether the slider lies horizontally or vertically
+        /// @return Does the slider lie vertically?
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        bool getVerticalScroll() const;
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
