@@ -95,6 +95,7 @@ namespace tgui
         ///
         /// @param size  The new size of the spin button
         ///
+        /// Note that the VerticalScroll propery is changed by this function based on the given width and height.
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         void setSize(const Layout2d& size) override;
         using Widget::setSize;
@@ -183,6 +184,22 @@ namespace tgui
         /// @see setStep
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         float getStep() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes whether the spin button lies horizontally or vertically
+        /// @param vertical  Should the spin button lie vertically?
+        ///
+        /// This function will swap the width and height of the spin button if it didn't lie in the wanted direction.
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setVerticalScroll(bool vertical);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns whether the spin button lies horizontally or vertically
+        /// @return Does the spin button lie vertically?
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        bool getVerticalScroll() const;
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
