@@ -209,6 +209,24 @@ namespace tgui
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+    void Scrollbar::setVerticalScroll(bool vertical)
+    {
+        if (m_verticalScroll == vertical)
+            return;
+
+        m_verticalScroll = vertical;
+        setSize(getSize().y, getSize().x);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    bool Scrollbar::getVerticalScroll() const
+    {
+        return m_verticalScroll;
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
     float Scrollbar::getDefaultWidth()
     {
         if (m_spriteTrack.isSet())
@@ -600,9 +618,9 @@ namespace tgui
 
     void Scrollbar::updateSize()
     {
-        if (getSize().x <= getSize().y)
+        if (getSize().x < getSize().y)
             m_verticalScroll = true;
-        else
+        else if (getSize().x > getSize().y)
             m_verticalScroll = false;
 
         bool textured = false;
