@@ -149,6 +149,23 @@ TEST_CASE("[Slider]")
         REQUIRE(((slider->getValue() > 23.4f) && (slider->getValue() < 23.6f)));
     }
 
+    SECTION("VerticalScroll")
+    {
+        slider->setSize(100, 20);
+        REQUIRE(!slider->getVerticalScroll());
+
+        slider->setSize(20, 100);
+        REQUIRE(slider->getVerticalScroll());
+
+        slider->setSize(10, 40);
+        slider->setVerticalScroll(false);
+        REQUIRE(!slider->getVerticalScroll());
+        REQUIRE(slider->getSize() == sf::Vector2f(40, 10));
+        slider->setVerticalScroll(true);
+        REQUIRE(slider->getVerticalScroll());
+        REQUIRE(slider->getSize() == sf::Vector2f(10, 40));
+    }
+
     SECTION("InvertedDirection")
     {
         REQUIRE(!slider->getInvertedDirection());
