@@ -14,6 +14,7 @@ TGUI 0.8.6  (TBD)
 - Added right mouse clicked signals to ClickableWidget (base class for several widgets) and Panel
 - Added HeaderClicked signal to ListView
 - Addded Signals namespace with strings for signals of all widgets
+- Added VerticalScroll property to Slider, Scrollbar and SpinButton, for more intuitive usage
 - SignalItem (used by ListBox and ComboBox) can now have the item index as optional parameter
 - Container widgets didn't pass right click event to child widgets
 - Widget state was incorrect when starting a show/hide animation while another was still busy
